# MOrgAna

./: .gitignore  README.md  importtime.prof  pyproject.toml  setup.cfg  setup.py
benchmarking/: morgana_benchmarking.py  profile_import.py
benchmarking/OrganoSeg/: clean_up_masks.py
morgana/: __main__.py
morgana.egg-info/: SOURCES.txt
morgana/CLI/: analyze_morphology.py  correct.py  evaluate.py  predict.py  split_test.py  train.py
morgana/DatasetTools/: arrangefluodata.py  arrangemorphodata.py  io.py
morgana/DatasetTools/fluorescence/: computefluorescence.py  io.py
morgana/DatasetTools/morphology/: computemorphology.py  io.py  overview.py
morgana/DatasetTools/multiprocessing/: __init__.py  istarmap.py
morgana/DatasetTools/segmentation/: __init__.py  io.py
morgana/DatasetTools/straightmorphology/: __init__.py  computestraightmorphology.py  io.py
morgana/Examples/python_example_scripts/: 01_create_model_folder.py  02_create_ground_truth.py  03_train_networks.py  04_predict_masks.py  05_select_final_mask_method.py  06_compute_final_masks.py  07_compute_straighten_morpho_and_fluo.py  08_make_overview_plots.py  09_make_morphology_plots.py  10_make_fluorescence_plots.py  11_bra_pole_vs_morpho_midline.py
morgana/GUIs/: __init__.py  editmask.py  fluo.py  inspection.py  mainwindow.py  manualmask.py  spot.py  visualize0d.py  visualize1d.py  visualize2d.py
morgana/ImageTools/: compositeImageJ.py  io.py  processfeatures.py
morgana/ImageTools/fluorescence/: computefluorescence.py  computeprofiles.py
morgana/ImageTools/locoefa/: computecoeff.py  initialize.py  reconstruct.py
morgana/ImageTools/morphology/: anchorpoints.py  computemorphology.py  meshgrid.py  midline.py  spline.py
morgana/ImageTools/objectsparsing/: __init__.py  objectsparser.py
morgana/ImageTools/segmentation/: segment.py  (+1 more)
morgana/MLModel/: augment.py  evaluate.py  io.py  overview.py  predict.py  train.py
morgana/cli/: classify.py  classifying_unet.py  correct.py  evaluate.py  label.py  new_model.py  predict.py  train.py
morgana/scripts/: segm_app.py
scripts/: MOrgAna_workflow_for_advance_python_users.ipynb  classifying.py  classifying_unet.py  corrections.py  egg_segmentation.py  evaluate.sh  labelling.py  morphological_analysis.py  morphological_analysis_batch.py  predict.sh  train.sh  train_unet  training.py
tests/: data_utils.py  test_morphology_overview.py  test_morphology_timelapse.py
tests/test_ML/: test_predict.py  test_train.py
tests/test_gui/: test_mainwindow.py
(+78 files in other folders)
